--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ServidorDB": "Server=localhost; Initial Catalog=LocalizacaoCasfil;user=admin;Password=admin;TrustServerCertificate=True;"   
+  }
 }
