Pagina contexto com tabelas

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ServidorDB": "Server=localhost; Initial Catalog=LocalizacaoCasfil;user=admin;Password=admin;TrustServerCertificate=True;"   
+    "ServidorDB": "Server=localhost; Initial Catalog=TesteLigacao;user=sa;Password=PageTurner!123;TrustServerCertificate=True;"   
   }
 }
