connection string update
connection string update

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ServidorDB": "Server=localhost; Initial Catalog=TesteLigacao;user=sa;Password=PageTurner!123;TrustServerCertificate=True;"   
+    "DefaultConnection": "Server=localhost,1433; Database=PageTurner; User Id=sa; Password=Pageturner2024#;"
   }
 }
