--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433; Database=PageTurner; User Id=sa; Password=Pageturner2024#;"
+    "DefaultConnection": "Server=localhost,1433; Database=PageTurner; User Id=sa; Password=Pageturner2024#; TrustServerCertificate=True;"
   }
 }
