--- a/backend/PageTurnerAPI.csproj
+++ b/backend/PageTurnerAPI.csproj
@@ -25,4 +25,7 @@
     <PackageReference Include="NUnit" Version="4.1.0"/>
     <PackageReference Include="Moq" Version="4.20.70"/>
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Tests\**\*.cs" />
+  </ItemGroup>
 </Project>
