--- a/backend/PageTurnerAPI.csproj
+++ b/backend/PageTurnerAPI.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <AssemblyName>PageTurnerAPI</AssemblyName>
     <Program>PageTurnerAPI</Program>
+    <GenerateProgramFile>false</GenerateProgramFile>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="BCrypt.Net" Version="0.1.0"/>
@@ -24,5 +25,11 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.0"/>
     <PackageReference Include="NUnit" Version="4.1.0"/>
     <PackageReference Include="Moq" Version="4.20.70"/>
+    <PackageReference Include="xunit" Version="2.7.1"/>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0-release-24177-07"/>
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.8"/>
   </ItemGroup>
+  <Target Name="RunTests" BeforeTargets="Run">
+    <Exec Command="dotnet test $(MSBuildProjectDirectory)" />
+  </Target>
 </Project>
