--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-jwt": "^1.2.1",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.2",
