Add profile para que seja possivel testar de com telemovel

--- a/backend/PageTurnerAPI/Properties/launchSettings.json
+++ b/backend/PageTurnerAPI/Properties/launchSettings.json
@@ -29,6 +29,16 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
+    "teste": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "applicationUrl": "http://localhost:5272;http://192.168.1.71:5272",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
