--- a/backend/PageTurnerAPI/PageTurnerAPI.csproj
+++ b/backend/PageTurnerAPI/PageTurnerAPI.csproj
@@ -7,23 +7,24 @@
     <Program>PageTurnerAPI</Program>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="BCrypt.Net" Version="0.1.0"/>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.3"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3"/>
+    <PackageReference Include="BCrypt.Net" Version="0.1.0" />
+    <PackageReference Include="EFCore.Seeder" Version="3.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.3"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2"/>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.0"/>
-    <PackageReference Include="NUnit" Version="4.1.0"/>
-    <PackageReference Include="Moq" Version="4.20.70"/>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.0" />
+    <PackageReference Include="NUnit" Version="4.1.0" />
+    <PackageReference Include="Moq" Version="4.20.70" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Tests\**\*.cs" />
